<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login1">

    <LinearLayout
        android:id="@+id/toplogin1"
        android:layout_width="423dp"
        android:layout_height="91dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logologin1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#AA2C19"
            android:src="@drawable/logo" />
    </LinearLayout>

    <TextView
        android:id="@+id/bemvindotv"
        android:layout_width="322dp"
        android:layout_height="161dp"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/playfair_italic"
        android:text="@string/bemvindo"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="29sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toplogin1" />

    <Button
        android:id="@+id/bt_entrar"
        android:layout_width="280dp"
        android:layout_height="59dp"
        android:layout_marginTop="180dp"
        android:backgroundTint="#1F750A"
        android:text="@string/btentrar"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bemvindotv" />

    <Button
        android:id="@+id/bt_cadastrar"
        android:layout_width="280dp"
        android:layout_height="59dp"
        android:layout_marginTop="45dp"
        android:backgroundTint="#AA2C19"
        android:text="@string/btcadastrar"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_entrar"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>