<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Logincadastra">

    <LinearLayout
        android:id="@+id/toplogin1"
        android:layout_width="423dp"
        android:layout_height="91dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logologin1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#AA2C19"
            android:src="@drawable/logo" />
    </LinearLayout>

    <TextView
        android:id="@+id/cadastrartv"
        android:layout_width="349dp"
        android:layout_height="110dp"
        android:layout_marginTop="112dp"
        android:fontFamily="@font/playfair_variable"
        android:gravity="start"
        android:text="@string/cadastratv"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toplogin1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailinput"
        android:layout_width="373dp"
        android:layout_height="62dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="1dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailtv">


        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/fundoinput"
            android:enabled="true"
            android:hint="@string/emailinput"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/senhainput"
        android:layout_width="373dp"
        android:layout_height="65dp"
        android:layout_marginTop="13dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:background="@drawable/fundoinput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senhatv"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"

            android:hint="@string/senhainput"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btcadastrar"
        android:layout_width="149dp"
        android:layout_height="55dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#AA2C19"
        android:text="@string/btcadastrar2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senhainput" />

    <TextView
        android:id="@+id/senhatv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="351dp"
        android:text="Senha:"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailinput" />

    <TextView
        android:id="@+id/emailtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="357dp"
        android:text="Email:"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadastrartv" />
</androidx.constraintlayout.widget.ConstraintLayout>